--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,21 +1,45 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+from flask import Flask, jsonify, request
 
-# testing
-/coverage
+app = Flask(__name__)
 
-# production
-/build
+# Define a Note class
+class Note:
+    def __init__(self, title, content):
+        self.title = title
+        self.content = content
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Create a list to store notes
+notes = []
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Define RESTful routes
+@app.route('/notes', methods=['GET'])
+def get_all_notes():
+    return jsonify([{'title': note.title, 'content': note.content} for note in notes])
+
+@app.route('/notes', methods=['POST'])
+def create_note():
+    data = request.get_json()
+    note = Note(data['title'], data['content'])
+    notes.append(note)
+    return jsonify({'title': note.title, 'content': note.content}), 201
+
+@app.route('/notes/<int:id>', methods=['GET'])
+def get_note(id):
+    note = notes[id]
+    return jsonify({'title': note.title, 'content': note.content})
+
+@app.route('/notes/<int:id>', methods=['PATCH'])
+def update_note(id):
+    note = notes[id]
+    data = request.get_json()
+    note.title = data.get('title', note.title)
+    note.content = data.get('content', note.content)
+    return jsonify({'title': note.title, 'content': note.content})
+
+@app.route('/notes/<int:id>', methods=['DELETE'])
+def delete_note(id):
+    notes.pop(id)
+    return '', 204
+
+if __name__ == '__main__':
+    app.run(debug=True)
